fix(backend/frontend): fix calculation of result list states (is certificate available, is cup score available)